2009-09-23  Sterling Augustine  <sterling@jaw.hq.tensilica.com>

	* config/tc-xtensa.c (md_apply_fix): Remove check for constant with
	difference of of two symbols.
	(xtensa_fix_adjustable): Likewise.

2009-09-23  Tim E. Sneddon  <tsneddon@kednos.com>

	* configure.com: Fix a typo.

2009-09-23  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c (define_sym_at_dot): New function, extracted from..
	(colon): ..here.  Define error case cloned symbol.

2009-09-21  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c: Remove white spaces.

2009-09-21  Ben Elliston  <bje@au.ibm.com>
	    Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (md_show_usage): Document -mpcca2.
	* doc/c-ppc.texi (PowerPC-Opts): Document -mppca2.

2009-09-18  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2009-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (offset_in_range): Sign extend offset only
	if BFD64 is defined.

2009-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386-intel.c (i386_intel_operand): Initialize
	intel_state.has_offset to 0.

2009-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (offset_in_range): Sign extend offset only
	for 32bit address mode.

2009-09-15  Tristan Gingold  <gingold@adacore.com>

	* makefile.vms (OBJS): Compile te-vms.c only on Itanium.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10637
	* config/tc-i386-intel.c (intel_state): Add has_offset.
	(i386_intel_simplify): Set intel_state.has_offset to 1 for
	O_offset.
	(i386_intel_operand): Turn on intel_state.is_mem if
	intel_state.has_offset is 0 and the last char is ']'.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10636
	* config/tc-i386.c (optimize_disp): Set disp32 for 64bit only
	if there is an ADDR_PREFIX.
	(i386_finalize_displacement): Repor error if signed 32bit
	displacement is out of range.

2009-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (MIPS_JALR_HINT_P): Take an expr argument.