@@ -1,0 +1,5 @@
+	.data
+foo:
+	.long 0
+	.text
+movl	foo@GOT(%ecx), %eax
