@@ -1,3 +1,10 @@
+2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/i386.exp: Run localpic.
+
+	* gas/i386/localpic.d: New.
+	* gas/i386/localpic.s: Likewise.
+
 2009-09-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/arm/thumbver.d: Tolerate some whitespace differences.
