@@ -1,3 +1,8 @@
+2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.h (TC_FORCE_RELOCATION_LOCAL): Don't check
+	BFD_RELOC_386_GOT32.
+
 2009-09-23  Sterling Augustine  <sterling@jaw.hq.tensilica.com>
 
 	* config/tc-xtensa.c (md_apply_fix): Remove check for constant with
